[gd_scene load_steps=10 format=2]

[ext_resource path="res://Battle/Chip/ChipBase.gd" type="Script" id=1]
[ext_resource path="res://Battle/Chip/assets/chipBlue.png" type="Texture" id=2]
[ext_resource path="res://Battle/Chip/managers/AttManager.gd" type="Script" id=3]
[ext_resource path="res://Battle/Chip/assets/arrow.png" type="Texture" id=4]
[ext_resource path="res://Battle/Chip/assets/Arrow.gd" type="Script" id=5]
[ext_resource path="res://Battle/Chip/managers/HpManager.gd" type="Script" id=6]

[sub_resource type="PhysicsMaterial" id=1]
friction = 0.0
bounce = 0.35

[sub_resource type="CircleShape2D" id=2]
radius = 60.0

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.427451, 0.67451, 0.392157, 1 )

[node name="Chip" type="RigidBody2D"]
mode = 2
mass = 1.02041
physics_material_override = SubResource( 1 )
gravity_scale = 0.0
contacts_reported = 10
contact_monitor = true
linear_damp = 1.0
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
scale = Vector2( 0.5, 0.5 )
shape = SubResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 2 )

[node name="GUI" type="Node2D" parent="."]
z_index = 1
z_as_relative = false

[node name="TurnIndicator" type="Sprite" parent="GUI"]
visible = false
modulate = Color( 0, 0, 0, 1 )
self_modulate = Color( 0.898039, 0.878431, 0.407843, 1 )
rotation = 1.5708
scale = Vector2( 0.15, 0.15 )
texture = ExtResource( 2 )

[node name="AttManager" type="Node2D" parent="GUI/TurnIndicator"]
rotation = -1.5708
scale = Vector2( 6.66667, 6.66667 )
script = ExtResource( 3 )

[node name="Arrow" type="Sprite" parent="GUI"]
visible = false
position = Vector2( 0.126296, -0.598736 )
scale = Vector2( 0.224741, 0.0555708 )
texture = ExtResource( 4 )
offset = Vector2( 325, 0 )
script = ExtResource( 5 )

[node name="HpManager" type="Node2D" parent="."]
script = ExtResource( 6 )

[node name="GUI" type="Node2D" parent="HpManager"]
z_index = 2
z_as_relative = false

[node name="HpBar" type="ProgressBar" parent="HpManager/GUI"]
margin_left = -61.9469
margin_top = -53.3184
margin_right = 62.0531
margin_bottom = -36.3184
custom_styles/fg = SubResource( 3 )
percent_visible = false

[node name="HpLabel" type="Label" parent="HpManager/GUI"]
margin_left = -36.8062
margin_top = -51.1301
margin_right = 38.1938
margin_bottom = -37.1301
text = "???/???"
align = 1

[node name="Tween" type="Tween" parent="HpManager/GUI"]
[connection signal="body_entered" from="." to="." method="_on_Chip_body_entered"]
[connection signal="death" from="HpManager" to="." method="_on_HpManager_death"]
